Rename to SignTestPlugin:

--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.bukkit</groupId>
-  <artifactId>bukkit-sample-plugin</artifactId>
-  <version>0.5</version>
-  <name>BukkitSamplePlugin</name>
-  <url>http://www.bukkit.org</url>
+  <groupId>io.github.satoshinm</groupId>
+  <artifactId>SignTestPlugin</artifactId>
+  <version>0.1</version>
+  <name>SignTestPlugin</name>
+  <url>https://github.com/satoshinm/SignTestPlugin</url>
 
   <repositories>
     <repository>
@@ -12,6 +12,10 @@
       <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
     </repository>
   </repositories>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
   <dependencies>
     <dependency>
