--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,7 @@
-name: SamplePlugin
-main: com.dinnerbone.bukkit.sample.SamplePlugin
+name: SignTestPlugin
+main: io.github.satoshinm.SignTestPlugin.SignTestPlugin
 version: ${version}
 commands:
   pos:
     description: Displays your position or teleports you to another.
     usage: "Usage: '/pos' to get current position, or '/pos x y z' to teleport to x,y,z"
-  debug:
-    description: Toggles your debugging status for this plugin.
-    usage: /debug
