Add /signtest command for isolating problem setting Sign material and block
https://github.com/satoshinm/WebSandboxMC/issues/91#issuecomment-307539799

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,6 @@ name: SignTestPlugin
 main: io.github.satoshinm.SignTestPlugin.SignTestPlugin
 version: ${version}
 commands:
-  pos:
-    description: Displays your position or teleports you to another.
-    usage: "Usage: '/pos' to get current position, or '/pos x y z' to teleport to x,y,z"
+  signtest:
+    description: Tests functionality related to signs
+    usage: "Usage: '/signtest'"
